# pyvlang

./: .gitignore  Makefile  README.md  setup.cfg  test.v
.github/workflows/: main.yml
pyvlang/: __init__.py
tests/: test_main.py
