[metadata]
name = pyvlang
version = 0.0.2
author = Eric Régnier
author-email = eric.regnier.mail@gmail.com
home-page = https://github.com/eregnier
description =
long-description = A Binding that let vlang libraries be usable with python, file: README.md
license = MIT
license-file = COPYING
description-file = README.md
platform = any
keywords = vlang,python,binding,library,performance,typing
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
test_suite = tests
setup_requires = setuptools

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true
